#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-09-09
2014-02-26 Andy
- add XtcFilterTypeIdSrc filter class for filtering XTC contents

Tag: V00-09-08
2014-01-06 Andy Salnikov
- XtcChunkDgIter::next() - add protection for corrupted headers, checks 
  extent size of the top-most XTC and raises exception if size is 
  lower that size of XTC header

Tag: V00-09-07
2013-11-07 David Schneider
- add convenience function to DgHeader

Tag: V00-09-06
2013-07-21 Andy Salnikov
- update test applications for changes in CmdLine interfaces

Tag: V00-09-05
2013-07-05 Andy Salnikov
- raise an exception when dataset makes empty list of files

Tag: V00-09-04
2013-06-10 Andy Salnikov
- implement simple exception transport for datagram queue

Tag: V00-09-03
2013-05-22 Andy Salnikov
- update doxygen comments

Tag: V00-09-02
2013-05-10 Andy Salnikov
- DgHeader.cpp: add more info to debug message

Tag: V00-09-01
2013-04-05 Andy Salnikov
- XtcIterator was missing a protection from XTC contaier having damage
  IncompleteContribution

Tag: V00-09-00
2013-03-29 Andy Salnikov
- add support for one-stream input of Xtc files

Tag: V00-08-03
2013-03-04 Andy Salnikov
- fixing doxygen comments fo XtcStreamMerger constructor

Tag: V00-08-02
2013-03-02 Andy Salnikov
- update tests for changes in API

Tag: V00-08-01
2013-03-01 Andy Salnikov
- re-apply changes in V00-07-03, make tag for nightly builds

Tag: V00-08-00
2013-03-01 Andy Salnikov
- undo V00-07-03 to make a tag for ana-0.7.x
- after introduction of read-ahead for headers current file name 
  does not make sense anymore
  - removed XtcStreamDgIter::m_file member and method 
    XtcStreamDgIter::chunkName()